samples/_failures_safe/1761509234_463681_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b3f9018.c: In function ‘main’:
./samples/SAFE/__tmp_4b3f9018.c:162:9: error: expected declaration or statement at end of input
  162 |         if (choice == 1) {
      |         ^~
./samples/SAFE/__tmp_4b3f9018.c:162:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4b3f9018.c:162:9: error: expected declaration or statement at end of input
